--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
         <spring.version>4.1.2.RELEASE</spring.version>
         <servlet.version>2.5</servlet.version>
         <log4j.version>1.7.25</log4j.version>
+        <junit.version>4.10</junit.version>
+        <netty.version>4.1.10.Final</netty.version>
     </properties>
     <dependencies>
         <dependency>
@@ -95,10 +97,30 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
+            <version>${netty.version}</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.19.0-GA</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jboss</id>
+            <url>http://repository.jboss.org/maven2/</url>
+        </repository>
+    </repositories>
 </project>
