--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <!--<finalName>mycode</finalName>-->
         <!--<resources>-->
             <!--<resource>-->
-                <!--<directory>src/main/resources</directory>-->
+                <!--<directory>src/main/resources</directFory>-->
                 <!--<filtering>true</filtering>-->
             <!--</resource>-->
         <!--</resources>-->
@@ -35,12 +35,13 @@
     <!--</build>-->
 
     <properties>
-        <spring.version>4.1.2.RELEASE</spring.version>
+        <spring.version>5.0.6.RELEASE</spring.version>
         <servlet.version>2.5</servlet.version>
         <log4j.version>1.7.25</log4j.version>
         <junit.version>4.10</junit.version>
         <netty.version>4.1.10.Final</netty.version>
         <mockito.version>1.9.0</mockito.version>
+        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
     </properties>
     <dependencies>
         <dependency>
@@ -92,6 +93,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
@@ -167,6 +173,24 @@
             <artifactId>hibernate</artifactId>
             <version>3.2.7.ga</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.ibatis</groupId>
+            <artifactId>ibatis-sqlmap</artifactId>
+            <version>2.3.4.726</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-ibatis</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
