--- a/pom.xml
+++ b/pom.xml
@@ -145,12 +145,6 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>com.sun.jdmk</groupId>
-            <artifactId>jmxtools</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-
         <!-- redis cache related.....start -->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -178,12 +172,12 @@
         <dependency>
             <groupId>org.apache.ibatis</groupId>
             <artifactId>ibatis-sqlmap</artifactId>
-            <version>2.3.4.726</version>
+            <version>3.0-beta-9</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-ibatis</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.8</version>
         </dependency>
 
         <dependency>
