--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modules>
         <module>springboot</module>
         <module>code</module>
+        <module>dubbo</module>
     </modules>
     <packaging>pom</packaging>
-    
 </project>
